@@ -92,7 +92,7 @@ function [t, movingReg, iterInfo] = elastix(regParam, fixed, moving, opts)
 
 % Author: Ramon Casero <rcasero@gmail.com>
 % Copyright © 2014 University of Oxford
-% Version: 0.3.1
+% Version: 0.3.2
 % $Rev$
 % $Date$
 % 
@@ -285,10 +285,10 @@ if (delete_movingfile)
     delete(movingfile)
 end
 if (delete_paramfile)
-    delete(paramfile)
+    elastix_delete_param_file(paramfile)
 end
 if (delete_t0file)
-    delete(t0file)
+    elastix_delete_param_file(t0file)
     t.InitialTransformParametersFileName = 'NoInitialTransform';
 end
 if (delete_fMaskfile)
